css/style.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,700);

body {
	background: #fff;
	color: #455164;
	font: 15px "Open Sans", sans-serif;
	margin: 0;
	margin-bottom: 100px;
}
a {
	color: inherit;
}
a:hover,
a:focus {
	color: inherit;
	text-decoration: none;
	outline: 0;
}
h2 {
	font-size: 32px;
	font-weight: 300;
}
p {
	line-height: 1.5;
}
li a,
p a {
	color: #84ce88;
	font-weight: bold;
}
li a:hover,
p a:hover {
	color: #77ca7b;
}
li {
	line-height: 1.5;
	margin: 6px 0;
}
code {
	background: #f5f5f5;
	border-radius: 3px;
	font-size: 0.8em;
	padding: 2px 4px;
}
pre {
	background: #f5f5f5;
	border-radius: 3px;
	font-size: 1em;
	line-height: 1.4;
	padding: 6px 10px;
	-moz-tab-size: 4;
	     tab-size: 4;
}
pre code {
	background: none;
	padding: 0;
}
.container {
	max-width: 750px;
	padding: 0 20px;
}
#nav {
	background: #455164;
	color: #bcc4d3;
	padding: 10px 0;
}
#nav a {
	font-weight: 700;
}
#nav a:hover {
	border-color: #fff;
	color: #fff;
}
#nav a + a {
	margin-left: 26px;
}
#nav .row {
	padding: 20px 0;
}
#nav .logo {
	color: #fff;
	font-size: 22px;
	line-height: 19px;
}
#nav .right {
	text-align: right;
}
#nav .github {
	border: 2px solid #bcc4d3;
	border-radius: 3px;
	padding: 6px 12px;
}
#splash {
	background: #455164;
	color: #fff;
	text-align: center;
	padding-bottom: 50px;
}
#splash h1 {
	font-size: 40px;
	font-weight: 700;
	margin: 0;
}
#splash h2 {
	color: #bcc4d3;
	font-size: 18px;
	font-weight: 300;
	margin: 0;
}
#splash p {
	margin-top: 18px;
	color: #bcc4d3;
}
#splash .row {
	padding: 20px 0;
}
#splash .logo {
	display: none;
	width: 160px;
	height: 160px;
}
#splash .hgroup {
	margin: 60px 0;
}
#splash .card {
	background: #84ce88;
	border-radius: 3px;
	display: inline-block;
	padding: 15px;
	margin: 5px;
	min-width: 330px;
}
#splash .card strong {
	display: block;
	font-size: 17px;
	font-family: monospace;
}
#splash #stable_version,
#splash #prerelease_version {
	opacity: .7;
}
#splash #prerelease_card.hidden {
	display: none;
}
#features {
	padding: 50px 0 80px;
}
#features h2 {
	margin-bottom: 50px;
	text-align: center;
}
#features h3 {
	font-weight: 700;
}
#features .feature {
	padding-bottom: 20px;
}
#docs {
	padding-top: 40px;
}
#main h1:first-child,
#main p {
	margin-top: 0;
}
#main h1,
#main h2,
#main h3 {
	margin: 1.3em 0 .5em;
}
#main h1 {
	font-size: 2.5em;
}
#main h2 {
	font-size: 24px;
	font-weight: bold;
}
#main h2 code {
	background: none;
	font: inherit;
	padding: 0;
}
#main h3 {
	margin-bottom: 13px;
}
#menu,
#main .content {
	margin-bottom: 60px;
}
#menu {
	line-height: 2;
}
#menu a,
#menu strong {
	display: block;
}
#menu a:hover,
#menu a.active {
	color: #84ce88;
}
#menu a.active {
	font-weight: bold;
}
#menu strong {
	margin-top: 1em;
}
#menu strong:first-child {
	margin-top: 0;
}
#blog h1 {
	margin-bottom: 5px;
	font-size: 28px;
}
#blog .content h2 {
	font-size: 22px;
}
#blog .post {
	padding: 40px 0 0;
}
#blog .post-date {
	color: #999;
	font-size: .8em;
	margin-bottom: 20px;
}
#blog .post-comments {
	margin-top: 60px;
}
#footer {
	color: #ccc;
	font-size: 12px;
}
#footer p {
	margin: 0;
}
#footer hr {
	margin: 0 15px 10px;
}
#footer .inner {
	border-top: 1px solid #eee;
	padding: 8px 0 6px;
}
#share {
	text-align: right;
}
#share .twitter-share {
	display: inline-block;
	overflow: hidden;
	width: 88px;
	margin-right: 5px;
}
#share .github-stars {
	display: inline-block;
	overflow: hidden;
	width: 93px;
}

@media (max-width: 768px) {
	body {
		margin-bottom: 60px;
	}
	#splash h1 {
		font-size: 22px;
	}
	#splash h2 {
		font-size: 16px;
	}
	#splash .logo {
		max-width: 140px;
	}
	#splash .button strong {
		font-size: 16px;
	}
	#features .feature {
		text-align: center;
		margin: 0 auto;
		max-width: 320px;
	}
	#footer,
	#share {
		text-align: center;
	}
	#share {
		padding-top: 10px;
	}
}
@media (max-width: 480px) {
	#nav .right a:first-child {
		display: none;
	}
	#splash .row {
		padding-top: 0;
	}
}

.alert {
	padding: 15px;
	margin-bottom: 20px;
	border: 1px solid transparent;
	border-radius: 4px;
}
.alert-warning {
	color: #8a6d3b;
	background-color: #fcf8e3;
	border-color: #faebcc;
}
.alert p:last-child {
	margin-bottom: 0;
}

